--- a/gridimage/index.html
+++ b/gridimage/index.html
@@ -40,7 +40,7 @@
             		<input type="button" value="Upload 4th" data-upload-id="custom_img_file4" class="uploadButton" id="uploadButton4" />
             		<input type="button" value="Upload 5th" data-upload-id="custom_img_file5" class="uploadButton" id="uploadButton5" />
             		<div style="margin-top:10px">
-            		<input type="text" id="txt_slogan" value="fb.com/mubankwamsuk" name="txt_slogan" placeholder="Slogan" style="width:100px">
+            		<input type="text" id="txt_slogan" value="ข่าวดังเฟซบุ๊ก" name="txt_slogan" placeholder="Slogan" style="width:100px">
             		<input type="number" id="txt_img_num" style="width: 80px;text-align:center" min="1" max="99" step="1" value="1">
                 <label for="txt_img_num">Amount of images</label>
                 </div>
