--- a/gridimage/index.html
+++ b/gridimage/index.html
@@ -40,7 +40,7 @@
             		<input type="button" value="Upload 4th" data-upload-id="custom_img_file4" class="uploadButton" id="uploadButton4" />
             		<input type="button" value="Upload 5th" data-upload-id="custom_img_file5" class="uploadButton" id="uploadButton5" />
             		<div style="margin-top:10px">
-            		<input type="text" id="txt_slogan" value="ข่าวดังเฟซบุ๊ก" name="txt_slogan" placeholder="Slogan" style="width:100px">
+            		<input type="text" id="txt_slogan" value="" name="txt_slogan" placeholder="Slogan" style="width:100px">
             		<input type="number" id="txt_img_num" style="width: 80px;text-align:center" min="1" max="99" step="1" value="1">
                 <label for="txt_img_num">Amount of images</label>
                 </div>
@@ -110,7 +110,7 @@
 						<div class="dv_t2_grid dv_t2_bottom">
 							<div class="dv_t2_ch"><div class="dv_display_img bg_position_center" data-img-bl-id="img_block3" data-img-width="" data-img-height=""><span></span></div></div>
 							<div class="dv_t2_ch"><div class="dv_display_img bg_position_center" data-img-bl-id="img_block4" data-img-width="" data-img-height=""><span></span></div></div>
-							<div class="dv_t2_ch"><div class="dv_display_img bg_position_center" data-img-bl-id="img_block5" data-img-width="" data-img-height=""><span></span></div></div>
+							<!-- <div class="dv_t2_ch"><div class="dv_display_img bg_position_center" data-img-bl-id="img_block5" data-img-width="" data-img-height=""><span></span></div></div> -->
 							<div class="dv_cover_bg"></div>
 							<div class="dv_cover_number" style=""><span class="sp_img_number" id="sp_img_number"></span></div>
 						</div>
